--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
         <div id="calc">
 
             <div id="display">
-                <div id="previous"></div>
-                <div id="current"></div>
+                <p id="previous">0</div>
+                <p id="current">0</div>
             </div>
 
             <div id="operator-btns">
