Remove unneeded console.log()

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div id="calc">
 
             <div id="display">
-                <p id="previous">0</div>
+                <p id="previous">=</div>
                 <p id="current">0</div>
             </div>
 
