Add decimal feature

--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
                 <button class="operator">-</button>
                 <button class="operator">*</button>
                 <button class="operator">/</button>
+                <button id="backspace">Bsp</button>
+                <button id="clear">C</button>
             </div>
 
             <div id="numpad">
@@ -33,9 +35,9 @@
                 <button class="num-btn">7</button>
                 <button class="num-btn">8</button>
                 <button class="num-btn">9</button>
-                <button id="equals">=</button>
+                <button id="decimal">.</button>
                 <button class="num-btn">0</button>
-                <button id="clear">C</button>
+                <button id="equals">=</button>
             </div>
         </div>
     </div>
