--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
 
@@ -12,8 +13,8 @@
         <div id="calc">
 
             <div id="display">
-                <p id="previous">=</div>
-                <p id="current">0</div>
+                <p id="previous">=</p>
+                <p id="current">0</p>
             </div>
 
             <div id="operator-btns">
