Style buttons and add calculator name

--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
     <div id="content">
         <div id="calc">
 
+            <h2>Calcul-8</h2>
+
             <div id="display">
                 <p id="previous">=</p>
                 <p id="current">0</p>
