Add header and footer to page

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
 </head>
 <body>
 
+    <div id="header">
+        <h1>Basic Calculator</h1>
+    </div>
+
     <div id="content">
         <div id="calc">
 
@@ -43,6 +47,10 @@
                 <button id="equals">=</button>
             </div>
         </div>
+    </div>
+
+    <div id="footer">
+        <p>Copyright © kgpolte 2013</p>
     </div>
 
     <script src="./calculator.js"></script>
